--- a/exp.html
+++ b/exp.html
@@ -36,29 +36,48 @@
       <p class="link">|</p>
       <a href="contact.html" class="link">Contact</a>
     </div>
-    <p class="Poppins fw-bold" style="font-style: italic; color:oklab(33.919% 0.01852 0.05853 / 0.733) ; font-size: 25px;">Skills</p>
+    <p class="Poppins fw-bold" style="font-style: italic; color:oklab(33.919% 0.01852 0.05853 / 0.733) ; font-size: 25px;">Experience</p>
+    <div class="text-muted my-3" style="font-size: 12px;">
+        My coding journey just began when I became a Computer Engineering student, and these are all the projects I've worked on so far. I'm really proud of them!
+        </div>
       <div style="max-width: 700px" class="mx-auto px-3">
       <div class="d-flex border mb-3 shadow-sm my-rounded-all">
         <div class="my-rounded-left">
-          <img src="images/coding.jpg" width="170px" height="170px" style="object-fit: cover" class="my-rounded-left d-none d-sm-block">
+          <img src="images/myst.png" width="180px" height="180px" style="object-fit: cover" class="my-rounded-left d-none d-sm-block">
         </div>
         <div class="p-4">
-          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Programming</p>
+          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Escape Mystery</p>
           <p>
-            I have experience coding in C and C++, and I'm currently studying HTML and JavaScript.
+            Originally based on a Scratch template, but redesigned with better UI, UX, and graphics.
           </p>
         </div>
       </div>
 
       <div class="d-flex border mb-3 shadow-sm my-rounded-all">
         <div class="p-4">
-          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">UI/UX Designing</p>
-          <span class="text-muted">
-            I can also do some UX/UI design! I used to make graphics for my game project in my first year.
-          </span>
+          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Fighter Strike</p>
+          <p>
+            For another group project, I worked for UX/UI design and also assisted with some coding.
+          
+            <div class="d-flex justify-content-center gap-2 fw-bold my-1">
+              <a href="https://scratch.mit.edu/projects/1079024620/fullscreen/" class="link">Click here!</a></div>
+          </p>
         </div>
         <div class="my-rounded-right">
-          <img src="images/ui.png" width="170" height="170" style="object-fit: cover" class="my-rounded-right d-none d-sm-block">
+          <img src="images/fs.png" width="150px" height="200px" style="object-fit: cover; object-position: 80%" class="my-rounded-right d-none d-sm-block">
+        </div>
+      </div>
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+        <div class="my-rounded-left">
+          <img src="images/baboon.png" width="180px" height="200px" style="object-fit: cover; object-position: 80%" class="my-rounded-left d-none d-sm-block">
+        </div>
+        <div class="p-4">
+          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Escape Mystery</p>
+          <p>
+            A 2-player party game featuring 5 mini-games. Compete to become the winner!
+            <div class="d-flex justify-content-center gap-2 fw-bold my-1">
+              <a href="https://discordapp.com/channels/@me/777198428659777606/1389873984958365747" class="link">Click here!</a></div>
+          </p>
         </div>
       </div>
     </div>
