--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <p class="Poppins fw-bold text-center fs-3" style="font-style: italic; color:oklab(33.919% 0.01852 0.05853 / 0.733) ; font-size: 25px;">Contact Me</p>
     <div style="max-width: 700px" class="mx-auto d-flex justify-content-center align-items-center gap-3 flex-wrap">
       <div>
-        <img src="images/me.jpg" class="octagon" width="200" height="200" style="object-fit: cover">
+        <img src="images/me.JPG" class="octagon" width="200" height="200" style="object-fit: cover">
       </div>
       <div class="vstack gap-2" style="max-width: 400px">
         <div class="d-flex">
