--- a/gallery.html
+++ b/gallery.html
@@ -16,9 +16,9 @@
       <p class="link">|</p>
       <a href="contact.html" class="link">Contact</a>
     </div>
-    <p class="Poppins fw-bold" style="font-style: italic; color:oklab(33.919% 0.01852 0.05853 / 0.733) ; font-size: 25px;">Gallery</p>
+    <p class="Poppins fw-bold my-3" style="font-style: italic; color:oklab(33.919% 0.01852 0.05853 / 0.733) ; font-size: 25px;">Gallery</p>
     <div class="d-flex gap-3 justify-content-center flex-wrap align-items-start">
-      <div class="card" style="width: 18rem; border-radius: 1rem;">
+      <div class="card hover-zoom" style="width: 18rem; border-radius: 1rem;">
         <img src="images/gal1.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">POSN Camp</h5>
@@ -28,7 +28,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem; border-radius: 1rem;">
+      <div class="card hover-zoom" style="width: 18rem; border-radius: 1rem;">
         <img src="images/gal2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">BORNPINK Concert</h5>
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem; border-radius: 1rem;">
+      <div class="card hover-zoom" style="width: 18rem; border-radius: 1rem;">
         <img src="images/gal3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Vitamin Sea</h5>
@@ -46,7 +46,7 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem; border-radius: 1rem;">
+      <div class="card hover-zoom" style="width: 18rem; border-radius: 1rem;">
         <img src="images/gal4.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Pasta pasta!</h5>
