--- a/exp.html
+++ b/exp.html
@@ -41,7 +41,7 @@
         My coding journey just began when I became a Computer Engineering student, and these are all the projects I've worked on so far. I'm really proud of them!
         </div>
       <div style="max-width: 700px" class="mx-auto px-3">
-      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all hover-zoom">
         <div class="my-rounded-left">
           <img src="images/myst.png" width="180px" height="180px" style="object-fit: cover" class="my-rounded-left d-none d-sm-block">
         </div>
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all hover-zoom">
         <div class="p-4">
           <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Fighter Strike</p>
           <p>
@@ -67,7 +67,7 @@
           <img src="images/fs.png" width="150px" height="200px" style="object-fit: cover; object-position: 60%" class="my-rounded-right d-none d-sm-block">
         </div>
       </div>
-      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all hover-zoom">
         <div class="my-rounded-left">
           <img src="images/baboon.png" width="180px" height="200px" style="object-fit: cover; object-position: 60%" class="my-rounded-left d-none d-sm-block">
         </div>
