--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <p class="Poppins fw-bold" style="font-style: italic; color:oklab(33.919% 0.01852 0.05853 / 0.733) ; font-size: 25px;">Skills</p>
       <div style="max-width: 700px" class="mx-auto px-3">
-      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all hover-zoom">
         <div class="my-rounded-left">
           <img src="images/coding.jpg" width="170px" height="170px" style="object-fit: cover" class="my-rounded-left d-none d-sm-block">
         </div>
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all hover-zoom">
         <div class="p-4">
           <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">UI/UX Designing</p>
           <span class="text-muted">
