--- a/exp.html
+++ b/exp.html
@@ -72,7 +72,7 @@
           <img src="images/baboon.png" width="180px" height="200px" style="object-fit: cover; object-position: 60%" class="my-rounded-left d-none d-sm-block">
         </div>
         <div class="p-4">
-          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Escape Mystery</p>
+          <p class="fw-semibold fs-5" style="color: oklab(33.919% 0.01852 0.05853 / 0.76);">Baboon DUO</p>
           <p>
             A 2-player party game featuring 5 mini-games. Compete to become the winner!
             <div class="d-flex justify-content-center gap-2 fw-bold my-1">
