--- a/exp.html
+++ b/exp.html
@@ -76,7 +76,7 @@
           <p>
             A 2-player party game featuring 5 mini-games. Compete to become the winner!
             <div class="d-flex justify-content-center gap-2 fw-bold my-1">
-              <a href="https://discordapp.com/channels/@me/777198428659777606/1389873984958365747" class="link">Click here!</a></div>
+              <a href="https://www.youtube.com/watch?si=YMnkizzp6P4saT0u&v=QpfsLEeSFYM&feature=youtu.be" class="link">Click here!</a></div>
           </p>
         </div>
       </div>
